[tool.poetry]
name = "automation"
version = "0.1.0"
description = ""
authors = ["Alexander Junge <alexander.junge@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^3.10.0"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
